Fix the gap around the screen

--- a/style.css
+++ b/style.css
@@ -98,6 +98,8 @@ button {
 body {
   display: flex;
   flex-direction: column;
+  margin: 0;
+  min-height: 100vh;
 }
 
 .button {
